[tool.poetry]
name = "vmashd"
version = "0.1.0"
description = "A frivilous tool to create random video/audio from provided files."
authors = ["Jonathan Boone <jeboone@gmail.com>"]

[tool.poetry.scripts]
vmashd = 'vmashd.main:run'

[build-system]
requires = ["setuptools>42"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 80
target_version = ['py36']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
