[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[metadata]
name = vmashd-boonej
version = 0.1.0
author = Jonathan Boone
author_email = jeboone@gmail.com
description = A frivilous tool to create random video/audio from provided files.
long_description = file:README.md
url = https://github.com/boonej/vmashd
project_urls =
  Bug Tracker = https://github.com/boonej/vmashd/issues
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: GNU License
  Operating System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.6
install_requires =
  moviepy

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  vmashd = vmashd.main:cli
