[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[metadata]
name = vmashd
version = 0.1.3
author = Jonathan Boone
author_email = jeboone@gmail.com
description = A frivolous tool to create random video/audio from provided files.
long_description = file: README.rst
license = MIT
url = https://pypi.org/project/vmashd/
project_urls =
  Bug Tracker = https://github.com/boonej/vmashd/issues
  Documentation = https://vmashd.readthedocs.io/
  Source Code = https://github.com/boonej/vmashd
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.6
install_requires =
  moviepy
  scikit-image

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  vmashd = vmashd.main:cli
